# bookshelf

./: .gitignore  .prettierrc
backend/: manage.py  pyproject.toml
backend/src/config/: asgi.py  wsgi.py
backend/src/config/settings/: __init__.py  base.py  development.py  production.py
